--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aeging",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "nodemon node ./bin/www"
@@ -9,6 +9,7 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-basic-auth": "^1.2.0",
     "mongoose": "^5.7.6",
     "morgan": "~1.9.1"
   },
